# ECG-Anomaly-Detection

./: .gitignore  README.md  data.dvc  params.yaml  pyproject.toml  requirements.txt  template.py
.dvc/: config
config/: config.yaml
research/: 01_data_analysis.ipynb  02_train_model.ipynb  03_evaluation.ipynb
src/AutoencoderClassifier/: __init__.py  exception.py
src/AutoencoderClassifier/components/: data_ingestion.py  model_building.py  model_evaluation.py  model_training.py
src/AutoencoderClassifier/config/: configuration.py
src/AutoencoderClassifier/entity/: config_entity.py
src/AutoencoderClassifier/pipeline/: stage_01_data_ingestion.py  stage_02_prepare_base_model.py  stage_03_model_training.py  stage_04_model_evaluation.py
src/AutoencoderClassifier/utils/: common.py
src/ecg_anomaly_detection.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
