[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecg-anomaly-detection"
version = "0.0.0"
description = "A small python package for detecting anomalies from ECG report"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "SarthakMogane", email = "sarthakmogane1501@gmail.com" }
]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/SarthakMogane/ECG-Anomaly-Detection"
BugTracker = "https://github.com/SarthakMogane/ECG-Anomaly-Detection/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
